--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -6,7 +6,7 @@
     {# head #}
     {% block head %}
         <head>
-            <title> Isuru Gunasekara </title>
+            <title> {% block title %}Isuru Gunasekara{% endblock %} </title>
             <meta charset="UTF-8">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
             <link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
