--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -26,8 +26,9 @@
 
                 <ul class="nav navbar-nav pull-right nav-list">
                     <li><a href=""> Home </a></li>
+                    <li><a href="{{ url_for('projects.projects_page') }}"> My Projects </a></li>
                     <li><a href=""> Register </a></li>
-                    <li><a href=""> SignIn </a></li>
+                    <li><a href=""> SignIn </a></li>                    
                 </ul>
             </div>
         </nav>
