Added gitleaks pre-commit to caheck for passwords before making repo public

--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -46,7 +46,7 @@
         <footer>
             <div class="container ftr">
                 <hr>
-                <p class="text-center small"> Isuru Gunasekara &copy;	| 2020 </p>
+                <p class="text-center small"> Isuru Gunasekara </p>
             </div>
         </footer>
         {% endblock footer %}
