Added some content to home.html

--- a/app/core/templates/home.html
+++ b/app/core/templates/home.html
@@ -1,2 +1,10 @@
 {% extends 'layout.html' %}
 {% block title %}Isuru Gunasekara{% endblock %}
+
+{% block content %}
+<div class="container">
+    {% include 'markdown/home_content.html' %}
+</div>
+
+
+{% endblock %}
