--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -9,6 +9,10 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
             <link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
             <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+            <script
+                type="module"
+                src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js">
+            </script>
         </head>
     {% endblock head %}
 
