Added a page to the blog

--- a/app/core/templates/markdown/home_content.html
+++ b/app/core/templates/markdown/home_content.html
@@ -1,17 +1,15 @@
 <h1 id="about-me">About me <!-- omit in toc --></h1>
-<p>I’m a machine learning engineer with diverse experience in machine learning, CI/CD, Kubernetes, Agile/SCRUM and leading highly performant teams.</p>
-<h1 id="toc">TOC <!-- omit in toc --></h1>
-<ul>
-<li><a href="#1-external-links">1. External links</a></li>
-<li><a href="#2-cv">2. CV</a></li>
-<li><a href="#source-for-this-website">Source for this website</a></li>
-</ul>
-<h1 id="external-links">1. External links</h1>
+<p>I’m a machine learning engineer with diverse experience in machine learning, CI/CD, Kubernetes, Agile/SCRUM and leading high performing teams.</p>
 <p>You can find more details about me at:</p>
 <p><a href="https://isuru.ca/cv.pdf">CV</a><br />
 <a href="https://github.com/isuruwg">GitHub</a><br />
 <a href="https://www.linkedin.com/in/isurug/">LinkedIn</a></p>
-<h1 id="cv">2. CV</h1>
+<h1 id="toc">TOC <!-- omit in toc --></h1>
+<ul>
+<li><a href="#1-cv">1. CV</a></li>
+<li><a href="#2-source-for-this-website">2. Source for this website</a></li>
+</ul>
+<h1 id="cv">1. CV</h1>
 <object data="https://isuru.ca/cv.pdf" type="application/pdf" width="700px" height="700px">
 <embed src="https://isuru.ca/cv.pdf">
 <p>
@@ -19,5 +17,5 @@ This browser does not support PDFs. Please download the PDF to view it: <a href=
 </p>
 </embed>
 </object>
-<h1 id="source-for-this-website">Source for this website</h1>
+<h1 id="source-for-this-website">2. Source for this website</h1>
 <p>The source for this website can be found <a href="https://github.com/isuruwg/personal-website">here</a></p>
