--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -27,8 +27,9 @@
                 <a class="navbar-brand title" href="{{ url_for('core.home_page') }}">Isuru Gunasekara</a>
 
                 <ul class="nav navbar-nav pull-right nav-list">
-                    <li><a href=""> Home </a></li>
+                    <li><a href="{{ url_for('core.home_page') }}"> Home </a></li>
                     <li><a href="cv.pdf"> CV </a></li>
+                    <li><a href="{{ url_for('blog.blog_root_page') }}"> Blog </a></li>
                 </ul>
             </div>
         </nav>
