Adding directory tree to the blog home

--- a/app/blog/templates/blog.html
+++ b/app/blog/templates/blog.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container">
-    {% include 'markdown/dvc.html' %}
+    {% include 'markdown/blog_index.html' %}
 </div>
 
 
