Added some content to projects page

--- a/app/core/templates/markdown/home_content.html
+++ b/app/core/templates/markdown/home_content.html
@@ -1,9 +1,15 @@
 <h1 id="about-me">About me <!-- omit in toc --></h1>
 <p>I’m a machine learning engineer with diverse experience in machine learning, CI/CD, Kubernetes, Agile/SCRUM and leading high performing teams.</p>
 <p>You can find more details about me at:</p>
-<p><a href="https://isuru.ca/cv.pdf">CV</a><br />
-<a href="https://github.com/isuruwg">GitHub</a><br />
-<a href="https://www.linkedin.com/in/isurug/">LinkedIn</a></p>
+<ul>
+<li><a href="https://isuru.ca/cv.pdf">CV</a><br />
+</li>
+<li><a href="https://github.com/isuruwg">GitHub</a><br />
+</li>
+<li><a href="https://www.linkedin.com/in/isurug/">LinkedIn</a></li>
+<li><a href="https://isuru.ca/projects">My Projects</a></li>
+<li><a href="https://isuru.ca/blog">Blog</a></li>
+</ul>
 <h1 id="toc">TOC <!-- omit in toc --></h1>
 <ul>
 <li><a href="#1-cv">1. CV</a></li>
