--- a/app/projects/templates/projects.html
+++ b/app/projects/templates/projects.html
@@ -1,2 +1,10 @@
 {% extends 'layout.html' %}
 {% block title %}My Projects{% endblock %}
+
+{% block content %}
+
+<div class="container">
+    {% include 'markdown/projects_list.html' %}
+</div>
+
+{% endblock %}
