--- a/app/core/templates/layout.html
+++ b/app/core/templates/layout.html
@@ -9,10 +9,7 @@
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
             <link href="https://fonts.googleapis.com/css?family=Sansita" rel="stylesheet">
             <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
-            <script
-                type="module"
-                src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js">
-            </script>
+            <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
         </head>
     {% endblock head %}
 
@@ -28,6 +25,7 @@
 
                 <ul class="nav navbar-nav pull-right nav-list">
                     <li><a href="{{ url_for('core.home_page') }}"> Home </a></li>
+                    <li><a href="{{ url_for('projects.projects_page') }}"> Projects </a></li>
                     <li><a href="cv.pdf"> CV </a></li>
                     <li><a href="{{ url_for('blog.blog_root_page') }}"> Blog </a></li>
                 </ul>
