--- a/app/projects/templates/markdown/projects_list.html
+++ b/app/projects/templates/markdown/projects_list.html
@@ -23,7 +23,7 @@
 <h1 id="patents-and-publications">1. Patents and Publications</h1>
 <h2 id="patent-methods-and-systems-for-multi-label-classification-of-text-data---2020">1.1. Patent: Methods and systems for multi-label classification of text data - 2020</h2>
 <p><strong><a href="https://patents.google.com/patent/US11163947B2/en">US11163947B2</a></strong></p>
-<p>Led the team that developed a novel multi-label classification method that utilizes soft labelling and stacking of multiple models to improve text classification performance}</p>
+<p>Led the team that developed a novel multi-label classification method that utilizes soft labelling and stacking of multiple models to improve text classification performance</p>
 <h2 id="enhancing-pio-element-detection-in-medical-text-using-contextualized-embedding---2019">1.2. Enhancing PIO Element Detection in Medical Text Using Contextualized Embedding - 2019</h2>
 <p><strong><a href="https://aclanthology.org/W19-5023.pdf">Published</a> in <a href="https://www.aclweb.org/portal/content/18th-sigbiomed-workshop-biomedical-natural-language-processing">BioNLP 2019 : 18th ACL Workshop on Biomedical Natural Language Processing</a> in Florence, Italy</strong></p>
 <p>A new approach to Population, Intervention and Outcome (PIO) element detection for Evidence Based Medicine and a new dataset created by applying multiple rule based labelling functions to unlabelled data and reweighing and combining their outputs into a single, confidence-weighted training label per data point. Obtained an ROC-AUC score of 0.9998</p>
