Added error handling when blog page route is invalid

--- a/app/blog/templates/markdown/DVC and MLflow tutorial.html
+++ b/app/blog/templates/markdown/DVC and MLflow tutorial.html
@@ -1,8 +1,8 @@
 <h1 id="tutorial-on-how-to-use-dvc-and-mlflow">Tutorial on how to use DVC and MLFlow <!-- omit in toc --></h1>
 <p>The code for this tutorial can be found <a href="https://github.com/isuruwg/dvc-and-mlflow-tutorial">here</a></p>
-<h1 id="toc">TOC <!-- omit in toc --></h1>
+<h1 id="contents">Contents <!-- omit in toc --></h1>
 <ul>
-<li><a href="#1-an-example-using-dvc-and-mlflow">1. An example using DVC and MLFlow</a>
+<li><a href="#1-introduction">1. Introduction</a>
 <ul>
 <li><a href="#11-environment-setup">1.1. Environment setup</a></li>
 <li><a href="#12-initialize-dvc">1.2. Initialize DVC</a></li>
@@ -24,9 +24,10 @@
 </ul></li>
 <li><a href="#3-references">3. References</a></li>
 </ul>
-<h1 id="an-example-using-dvc-and-mlflow">1. An example using DVC and MLFlow</h1>
+<h1 id="introduction">1. Introduction</h1>
+<p>This introductory tutorial will walk you through how to track different versions of your datasets using DVC and tracking experiments (hyperparameters, results, datasets used, etc.) using MLFlow. This walkthrough is designed to give a quick idea of how to use both these tools. However, since there are some overlaps in the features of DVC and MLFlow, you can use just one tool or the other for your applications too to achieve similar results.</p>
 <p>This is based on <a href="https://www.youtube.com/watch?v=W2DvpCYw22o&amp;t">Data Versioning and Reproducible ML with DVC and MLflow - Youtube</a>.</p>
-<p>This is just one example on how to use DVC and MLFlow. These tools can be used in many other ways. Please refer to the <a href="https://dvc.org/doc/start">dvc</a> and <a href="https://www.mlflow.org/docs/latest/tutorials-and-examples/tutorial.html">mlflow</a> official tutorials for more info.</p>
+<p>Please refer to the <a href="https://dvc.org/doc/start">dvc</a> and <a href="https://www.mlflow.org/docs/latest/tutorials-and-examples/tutorial.html">mlflow</a> official tutorials for more info.</p>
 <h2 id="environment-setup">1.1. Environment setup</h2>
 <p>This tutorial was tested with Python 3.9.2.</p>
 <p>Create virtual environment:</p>
