--- a/app/core/templates/markdown/home_content.html
+++ b/app/core/templates/markdown/home_content.html
@@ -10,7 +10,7 @@
 <li><a href="https://isuru.ca/projects">My Projects</a></li>
 <li><a href="https://isuru.ca/blog">Blog</a></li>
 </ul>
-<h1 id="contents">Contents <!-- omit in toc --></h1>
+<h1 id="toc">TOC <!-- omit in toc --></h1>
 <ul>
 <li><a href="#1-cv">1. CV</a></li>
 <li><a href="#2-source-for-this-website">2. Source for this website</a></li>
