--- a/app/projects/templates/markdown/projects_list.html
+++ b/app/projects/templates/markdown/projects_list.html
@@ -1,4 +1,4 @@
-<h1 id="toc">TOC <!-- omit in toc --></h1>
+<h1 id="contents">Contents <!-- omit in toc --></h1>
 <ul>
 <li><a href="#1-patents-and-publications">1. Patents and Publications</a>
 <ul>
@@ -37,13 +37,13 @@
 <p><strong><a href="https://ieeexplore.ieee.org/document/8053237">Published</a> in the <a href="https://ieee-cas.org/conference/2017-ieee-60th-international-midwest-symposium-circuits-and-systems-mwscas">60th International Midwest Symposium on Circuits and Systems (MWSCAS)</a> in Medford, MA, US</strong></p>
 <p>Developed a novel method for occupancy detection using Ultra Wide-band (UWB) radar. The developed algorithm is able to distinguish two people separated by only 0.8m with 86% accuracy while also being able to detect binary occupancy 100% of the time</p>
 <h1 id="projects">2. Projects</h1>
-<p>This section is still under construction</p>
+<p><strong>This section is still under construction</strong></p>
 <h2 id="speech-to-speech-translation">2.1. Speech to speech translation</h2>
 <h2 id="uwb-radar-based-breathing-rate-detection">2.2. UWB Radar based breathing rate detection</h2>
 <h2 id="toxic-comment-classification-engine">2.3. Toxic comment classification engine</h2>
 <h2 id="ultra-low-power-display-driver-for-bi-stable-displays">2.4. Ultra low power display driver for bi-stable displays</h2>
 <h2 id="autonomous-inventory-robot">2.5. Autonomous inventory robot</h2>
-<p>Developed a robot capable of of autonomously navigating inside a retail store environment while avoiding obstacles and taking inventory of RFID tagged merchandise for Kohl’s US. This robot also won the following awards: - Winner in the Research and Development category and the winner of the overall gold award in the National Best Quality ICT Awards Sri Lanka, 2015 organized by the British Computer Society (BCS). - Winner of the Asia Pacific ICT Alliance Awards 2015 (APICTA 2015 Awards) in the Research and Development category. The Asia Pacific ICT Alliance is an alliance between 16 member countries in the Asia Pacific region and the autonomous inventory robot won the gold award competing with 11 teams from Australia, China, Hong Kong, Malaysia, Thailand, Taiwan and Indonesia.</p>
+<p>Developed a robot capable of of autonomously navigating inside a retail store environment while avoiding obstacles and taking inventory of RFID tagged merchandise for a fortune 500 retailer. This robot also won the following awards: - Winner in the Research and Development category and the winner of the overall gold award in the National Best Quality ICT Awards Sri Lanka, 2015 organized by the British Computer Society (BCS). - Winner of the Asia Pacific ICT Alliance Awards 2015 (APICTA 2015 Awards) in the Research and Development category. The Asia Pacific ICT Alliance is an alliance between 16 member countries in the Asia Pacific region and the autonomous inventory robot won the gold award competing with 11 teams from Australia, China, Hong Kong, Malaysia, Thailand, Taiwan and Indonesia.</p>
 <h2 id="telepresence-robot">2.6. Telepresence robot</h2>
 <h2 id="fpga-based-image-enhancement-and-object-detection-system.">2.7. FPGA based image enhancement and object detection system.</h2>
 <p>A system capable of receiving new images from a computer and processing them with various filters on an Altera Cyclone II FPGA and displaying them on an onboard LCD display was developed. An Altera NIOS II soft processor was used in conjunction with the hardware modules to handle image transmission, storage and display.</p>
