Added more info into projects section

--- a/app/blog/templates/markdown/DVC and MLflow tutorial.html
+++ b/app/blog/templates/markdown/DVC and MLflow tutorial.html
@@ -25,7 +25,7 @@
 <li><a href="#3-references">3. References</a></li>
 </ul>
 <h1 id="introduction">1. Introduction</h1>
-<p>This introductory tutorial will walk you through how to track different versions of your datasets using DVC and tracking experiments (hyperparameters, results, datasets used, etc.) using MLFlow. This walkthrough is designed to give a quick idea of how to use both these tools. However, since there are some overlaps in the features of DVC and MLFlow, you can use just one tool or the other for your applications too to achieve similar results.</p>
+<p>This introductory tutorial will walk you through how to track different versions of your datasets using DVC and experiments (hyperparameters, results, datasets used, etc.) using MLFlow. This walkthrough is designed to give a quick idea of how to use both these tools. However, since there are some overlaps in the features of DVC and MLFlow, you can use just one tool or the other for your applications too to achieve similar results.</p>
 <p>This is based on <a href="https://www.youtube.com/watch?v=W2DvpCYw22o&amp;t">Data Versioning and Reproducible ML with DVC and MLflow - Youtube</a>.</p>
 <p>Please refer to the <a href="https://dvc.org/doc/start">dvc</a> and <a href="https://www.mlflow.org/docs/latest/tutorials-and-examples/tutorial.html">mlflow</a> official tutorials for more info.</p>
 <h2 id="environment-setup">1.1. Environment setup</h2>
